--- a/src/server/node/package.json
+++ b/src/server/node/package.json
@@ -3,9 +3,15 @@
   "version": "0.0.1",
   "description": "Joan is a public miniservice for handling user credentials",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "planetnineisaspaceship",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.19.2",
+    "redis": "^4.7.0",
+    "sessionless-node": "^0.10.1"
+  }
 }
