--- a/src/server/node/package.json
+++ b/src/server/node/package.json
@@ -10,6 +10,7 @@
   "author": "planetnineisaspaceship",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "sessionless-node": "^0.10.1"
   }
