--- a/src/server/node/package.json
+++ b/src/server/node/package.json
@@ -10,9 +10,10 @@
   "author": "planetnineisaspaceship",
   "license": "MIT",
   "dependencies": {
+    "bdo-js": "^0.0.4",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "fount-js": "^0.0.1",
+    "fount-js": "^0.0.2",
     "sessionless-node": "^0.10.1"
   }
 }
